# Copyright (C) 2016-2020  CEA/DEN, EDF R&D
#
# This library is free software; you can redistribute it and/or
# modify it under the terms of the GNU Lesser General Public
# License as published by the Free Software Foundation; either
# version 2.1 of the License, or (at your option) any later version.
#
# This library is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
# Lesser General Public License for more details.
#
# You should have received a copy of the GNU Lesser General Public
# License along with this library; if not, write to the Free Software
# Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA
#
# See http://www.salome-platform.org/ or email : webmaster.salome@opencascade.com
#
# Compilation de Creation_Maillage

SET(Creation_Maillage_SOURCES
    ./cmal01.F
    ./cmalco.F
    ./cmalde.F
    ./cmalra.F
    ./cmcact.F
    ./cmcdhb.F
    ./cmcdhe.F
    ./cmcdpe.F
    ./cmcdq2.F
    ./cmcdq3.F
    ./cmcdq5.F
    ./cmcdqu.F
    ./cmcdte.F
    ./cmcdtr.F
    ./cmch01.F
    ./cmch02.F
    ./cmch03.F
    ./cmch04.F
    ./cmch05.F
    ./cmch06.F
    ./cmch07.F
    ./cmch08.F
    ./cmch09.F
    ./cmch10.F
    ./cmch11.F
    ./cmch12.F
    ./cmch13.F
    ./cmch14.F
    ./cmch15.F
    ./cmch16.F
    ./cmch17.F
    ./cmch18.F
    ./cmch19.F
    ./cmch20.F
    ./cmch21.F
    ./cmch22.F
    ./cmch23.F
    ./cmch24.F
    ./cmch31.F
    ./cmch32.F
    ./cmch33.F
    ./cmch34.F
    ./cmch35.F
    ./cmch36.F
    ./cmch40.F
    ./cmch41.F
    ./cmch42.F
    ./cmch43.F
    ./cmch44.F
    ./cmch45.F
    ./cmch46.F
    ./cmch61.F
    ./cmch62.F
    ./cmch63.F
    ./cmch64.F
    ./cmch65.F
    ./cmch66.F
    ./cmch67.F
    ./cmch68.F
    ./cmch69.F
    ./cmch70.F
    ./cmch71.F
    ./cmch72.F
    ./cmch81.F
    ./cmch82.F
    ./cmch83.F
    ./cmch84.F
    ./cmch85.F
    ./cmch86.F
    ./cmch87.F
    ./cmch88.F
    ./cmcha1.F
    ./cmcha2.F
    ./cmcha3.F
    ./cmchaa.F
    ./cmchac.F
    ./cmchad.F
    ./cmchae.F
    ./cmchaf.F
    ./cmchag.F
    ./cmchah.F
    ./cmchai.F
    ./cmchak.F
    ./cmchal.F
    ./cmcham.F
    ./cmchan.F
    ./cmchap.F
    ./cmchaq.F
    ./cmchar.F
    ./cmchas.F
    ./cmchat.F
    ./cmchau.F
    ./cmchav.F
    ./cmchaw.F
    ./cmchea.F
    ./cmchex.F
    ./cmchf0.F
    ./cmchfa.F
    ./cmchfb.F
    ./cmchfc.F
    ./cmchfd.F
    ./cmchfe.F
    ./cmchpa.F
    ./cmchpb.F
    ./cmconf.F
    ./cmcp01.F
    ./cmcp02.F
    ./cmcp03.F
    ./cmcp04.F
    ./cmcp05.F
    ./cmcp06.F
    ./cmcp0a.F
    ./cmcp0b.F
    ./cmcp0c.F
    ./cmcp0d.F
    ./cmcp17.F
    ./cmcp18.F
    ./cmcp19.F
    ./cmcp1a.F
    ./cmcp1b.F
    ./cmcp1c.F
    ./cmcp1e.F
    ./cmcp21.F
    ./cmcp22.F
    ./cmcp23.F
    ./cmcp24.F
    ./cmcp25.F
    ./cmcp26.F
    ./cmcp2a.F
    ./cmcp2b.F
    ./cmcp2c.F
    ./cmcp2e.F
    ./cmcp31.F
    ./cmcp32.F
    ./cmcp33.F
    ./cmcp34.F
    ./cmcp35.F
    ./cmcp36.F
    ./cmcp3a.F
    ./cmcp3b.F
    ./cmcp3c.F
    ./cmcp3e.F
    ./cmcp3f.F
    ./cmcp3g.F
    ./cmcp3h.F
    ./cmcp43.F
    ./cmcp44.F
    ./cmcp45.F
    ./cmcp4a.F
    ./cmcp4b.F
    ./cmcp4c.F
    ./cmcp4d.F
    ./cmcp4e.F
    ./cmcp51.F
    ./cmcp52.F
    ./cmcp5a.F
    ./cmcp5b.F
    ./cmcp5c.F
    ./cmcp5e.F
    ./cmcpen.F
    ./cmcpy2.F
    ./cmcpy3.F
    ./cmcpy4.F
    ./cmcpya.F
    ./cmcpyr.F
    ./cmcqua.F
    ./cmcte3.F
    ./cmctea.F
    ./cmctet.F
    ./cmctri.F
    ./cmdera.F
    ./cmdrar.F
    ./cmdrhe.F
    ./cmdrpe.F
    ./cmdrqu.F
    ./cmdrte.F
    ./cmdrtr.F
    ./cmh100.F
    ./cmh200.F
    ./cmh201.F
    ./cmh202.F
    ./cmh203.F
    ./cmh204.F
    ./cmh300.F
    ./cmh301.F
    ./cmh302.F
    ./cmh303.F
    ./cmh304.F
    ./cmh305.F
    ./cmh306.F
    ./cmh307.F
    ./cmh308.F
    ./cmh309.F
    ./cmh310.F
    ./cmh311.F
    ./cmh400.F
    ./cmh401.F
    ./cmh402.F
    ./cmh403.F
    ./cmh404.F
    ./cmh405.F
    ./cmh406.F
    ./cmh407.F
    ./cmh408.F
    ./cmh409.F
    ./cmh410.F
    ./cmh411.F
    ./cmh412.F
    ./cmh413.F
    ./cmh414.F
    ./cmh415.F
    ./cmh416.F
    ./cmh417.F
    ./cmh418.F
    ./cmh500.F
    ./cmh501.F
    ./cmh502.F
    ./cmh503.F
    ./cmh504.F
    ./cmh505.F
    ./cmh506.F
    ./cmh507.F
    ./cmh508.F
    ./cmh509.F
    ./cmh510.F
    ./cmh511.F
    ./cmh512.F
    ./cmh600.F
    ./cmh601.F
    ./cmh602.F
    ./cmh603.F
    ./cmh604.F
    ./cmh605.F
    ./cmh606.F
    ./cmh607.F
    ./cmh608.F
    ./cmh700.F
    ./cmh701.F
    ./cmh800.F
    ./cmh801.F
    ./cmh900.F
    ./cmhoma.F
    ./cmhomo.F
    ./cmhomq.F
    ./cmhomt.F
    ./cmin00.F
    ./cminma.F
    ./cmmisa.F
    ./cmnbco.F
    ./cmno22.F
    ./cmnoim.F
    ./cmnosu.F
    ./cmraff.F
    ./cmrda1.F
    ./cmrda2.F
    ./cmrdhe.F
    ./cmrdpe.F
    ./cmrdqu.F
    ./cmrdte.F
    ./cmrdtr.F
    ./cmtrnp.F
    )

INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/src/tool/Creation_Maillage ../Includes_Generaux)

SET ( CMAKE_Fortran_FLAGS "-ffixed-line-length-0 -fdefault-double-8 -fdefault-real-8 -fdefault-integer-8 -fimplicit-none -O2" )

ADD_LIBRARY (Creation_Maillage ${Creation_Maillage_SOURCES})

INSTALL(TARGETS Creation_Maillage EXPORT ${PROJECT_NAME}TargetGroup DESTINATION ${SALOME_INSTALL_LIBS})
